--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:postgresql://localhost/autosalone_FE_07_24
 spring.datasource.username=postgres
 spring.datasource.password=asemota91
 
+cloudinary.cloud_name=dmc1dmdyo
+cloudinary.api_key=481988757858357
+cloudinary.api_secret=ZrgGFNvYC7GX5iHOJodcL506-EQ
