--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,15 @@ spring.datasource.password=asemota91
 cloudinary.cloud_name=dmc1dmdyo
 cloudinary.api_key=481988757858357
 cloudinary.api_secret=ZrgGFNvYC7GX5iHOJodcL506-EQ
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=fullstack072024@gmail.com
+spring.mail.password=mfpgnhktxxjdvxqb
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
