--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=FE_07_24_SP2_2
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/autosalone_FE_07_24
@@ -9,6 +9,11 @@ spring.datasource.password=asemota91
 cloudinary.cloud_name=dmc1dmdyo
 cloudinary.api_key=481988757858357
 cloudinary.api_secret=ZrgGFNvYC7GX5iHOJodcL506-EQ
+
+secret.key=1234567890poiuytrewqmnbvcxz
+
+# server port
+server.port=8080
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
